<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    android:fitsSystemWindows="true"
    tools:context="io.github.agaghd.fakebilibili.homepage.HomeFragment">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:divider="@drawable/divider"
        android:showDividers="middle|end">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/mainThemeColor"
            app:layout_scrollFlags="scroll|enterAlways">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="Faker"
                    android:textColor="@android:color/white"
                    android:textSize="32sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:src="@mipmap/ic_launcher" />
            </RelativeLayout>

        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.design.widget.TabLayout
            android:id="@+id/main_tab"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/common_tab_height"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:background="@android:color/transparent"
            app:tabIndicatorColor="@color/mainThemeColor"
            app:tabPaddingEnd="@dimen/common_padding_screen"
            app:tabPaddingStart="@dimen/common_padding_screen"
            app:tabSelectedTextColor="@color/mainThemeColor"
            app:tabTextColor="@color/commonTextColor">

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_fragment_tab_live" />

            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_fragment_tab_haokangde" />


            <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_fragment_tab_bangumi" />


        </android.support.design.widget.TabLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/main_view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:background="@color/halfTransBlack">

    </android.support.v4.view.ViewPager>

</android.support.design.widget.CoordinatorLayout>
